--- a/.github/workflows/firsttimer.yaml
+++ b/.github/workflows/firsttimer.yaml
@@ -2,6 +2,12 @@ name: First Timer
 
 on: [pull_request, issues]
 
+permissions:
+  id-token: write
+  contents: read
+  issues: write
+  pull-requests: write
+
 jobs:
   greeting:
     runs-on: ubuntu-latest
